--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "json-loader": "^0.5.4",
+    "node-sass": "^3.4.2",
     "postcss-loader": "^0.8.1",
     "postcss-modules-local-by-default": "^1.0.1",
     "postcss-url": "^5.1.1",
     "precss": "^1.4.0",
     "react-hot-loader": "^1.3.0",
     "resolve-url-loader": "^1.4.3",
+    "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.7",
@@ -35,6 +37,7 @@
     "lodash": "^4.5.1",
     "material-design-icons": "^2.2.0",
     "material-ui": "^0.14.4",
+    "qiita-coat": "^0.1.3",
     "react": "^0.14.7",
     "react-css-modules": "^3.7.5",
     "react-dom": "^0.14.7",
